syntax = "proto3";

option go_package = "grpc/news/pb";

package pb;

message NewsIdInt {
  int32 id = 1;
}
