syntax = "proto3";

option go_package = "grpc/news/pb";

package pb;

message TagNews {
  string id = 1;
  string name = 2;
  int32 count = 3;
}

message TagNewsResp {
  int32 code = 1;
  string msg = 2;
  repeated TagNews tags = 3;
}